solite-lexer/src/snapshots/solite_lexer__select 'rooga'.snap
---
source: solite-lexer/src/lib.rs
expression: result
---
[
    (
        "select",
        Token {
            kind: Select,
            start: 0,
            end: 6,
            value: None,
        },
    ),
    (
        " 'rooga'",
        Token {
            kind: String,
            start: 6,
            end: 14,
            value: Text(
                " 'rooga'",
            ),
        },
    ),
    (
        "",
        Token {
            kind: Eof,
            start: 14,
            end: 14,
            value: None,
        },
    ),
]
